source/blender/windowmanager/intern/wm_init_exit.c
@@ -113,6 +113,7 @@
 
 #include "BKE_depsgraph.h"
 #include "BKE_sound.h"
+#include "COM_compositor.h"
 
 static void wm_init_reports(bContext *C)
 {
@@ -211,7 +212,6 @@ void WM_init(bContext *C, int argc, const char **argv)
 #ifdef WITH_COMPOSITOR
 	if (1) {
 		extern void *COM_linker_hack;
-		extern void *COM_execute;
 		COM_linker_hack = COM_execute;
 	}
 #endif
@@ -414,6 +414,10 @@ void WM_exit_ext(bContext *C, const short do_python)
 	BKE_sequencer_free_clipboard(); /* sequencer.c */
 	BKE_tracking_clipboard_free();
 		
+#ifdef WITH_COMPOSITOR
+	COM_deinitialize();
+#endif
+	
 	free_blender();  /* blender.c, does entire library and spacetypes */
 //	free_matcopybuf();
 	free_anim_copybuf();
